add jquery based scraping for jam charts, redo song listings for showing jam charts and be more compact, add retina icons, add airplay button, fix #7. fix #4. fix #3. fix #6.

--- a/Phish Tracks/StreamingMusicViewController.xib
+++ b/Phish Tracks/StreamingMusicViewController.xib
@@ -43,6 +43,7 @@
 						<object class="NSPSMatrix" key="NSFrameMatrix"/>
 						<string key="NSFrame">{{20, 83}, {280, 21}}</string>
 						<reference key="NSSuperview" ref="143291511"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="749645303"/>
 						<string key="NSHuggingPriority">{251, 251}</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -76,6 +77,7 @@
 						<object class="NSPSMatrix" key="NSFrameMatrix"/>
 						<string key="NSFrame">{{20, 108}, {280, 48}}</string>
 						<reference key="NSSuperview" ref="143291511"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="256999089"/>
 						<string key="NSHuggingPriority">{251, 251}</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -107,6 +109,7 @@
 						<object class="NSPSMatrix" key="NSFrameMatrix"/>
 						<string key="NSFrame">{{124, 160}, {73, 44}}</string>
 						<reference key="NSSuperview" ref="143291511"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="317348488"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -144,6 +147,7 @@
 						<object class="NSPSMatrix" key="NSFrameMatrix"/>
 						<string key="NSFrame">{{124, 160}, {73, 44}}</string>
 						<reference key="NSSuperview" ref="143291511"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="529279300"/>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">1</int>
@@ -172,7 +176,8 @@
 						<object class="NSPSMatrix" key="NSFrameMatrix"/>
 						<string key="NSFrame">{{205, 160}, {73, 44}}</string>
 						<reference key="NSSuperview" ref="143291511"/>
-						<reference key="NSNextKeyView"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="514871870"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
@@ -196,6 +201,7 @@
 						<object class="NSPSMatrix" key="NSFrameMatrix"/>
 						<string key="NSFrame">{{43, 160}, {73, 44}}</string>
 						<reference key="NSSuperview" ref="143291511"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="451727166"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -220,6 +226,7 @@
 						<object class="NSPSMatrix" key="NSFrameMatrix"/>
 						<string key="NSFrame">{{18, 31}, {284, 23}}</string>
 						<reference key="NSSuperview" ref="143291511"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="137964510"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -233,6 +240,7 @@
 						<object class="NSPSMatrix" key="NSFrameMatrix"/>
 						<string key="NSFrame">{{238, 54}, {62, 21}}</string>
 						<reference key="NSSuperview" ref="143291511"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="639251841"/>
 						<string key="NSHuggingPriority">{251, 251}</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -261,6 +269,7 @@
 						<object class="NSPSMatrix" key="NSFrameMatrix"/>
 						<string key="NSFrame">{{20, 54}, {62, 21}}</string>
 						<reference key="NSSuperview" ref="143291511"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="154608992"/>
 						<string key="NSHuggingPriority">{251, 251}</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -281,6 +290,7 @@
 						<object class="NSPSMatrix" key="NSFrameMatrix"/>
 						<string key="NSFrameSize">{320, 21}</string>
 						<reference key="NSSuperview" ref="143291511"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="354921480"/>
 						<string key="NSHuggingPriority">{251, 251}</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -296,11 +306,52 @@
 						<reference key="IBUIFont" ref="1002500714"/>
 						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 					</object>
+					<object class="IBUIButton" id="514871870">
+						<reference key="NSNextResponder" ref="143291511"/>
+						<int key="NSvFlags">1293</int>
+						<object class="NSPSMatrix" key="NSFrameMatrix"/>
+						<string key="NSFrame">{{85, 204}, {73, 44}}</string>
+						<reference key="NSSuperview" ref="143291511"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="985868533"/>
+						<object class="NSColor" key="IBUIBackgroundColor">
+							<int key="NSColorSpace">1</int>
+							<bytes key="NSRGB">MSAxIDEAA</bytes>
+						</object>
+						<bool key="IBUIOpaque">NO</bool>
+						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+						<int key="IBUIContentHorizontalAlignment">0</int>
+						<int key="IBUIContentVerticalAlignment">0</int>
+						<reference key="IBUIHighlightedTitleColor" ref="76412669"/>
+						<object class="NSColor" key="IBUINormalTitleColor">
+							<int key="NSColorSpace">1</int>
+							<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
+						</object>
+						<reference key="IBUINormalTitleShadowColor" ref="55074913"/>
+						<object class="NSCustomResource" key="IBUINormalImage">
+							<string key="NSClassName">NSImage</string>
+							<string key="NSResourceName">glyphicons_151_new_window.png</string>
+						</object>
+						<reference key="IBUIFontDescription" ref="992356259"/>
+						<reference key="IBUIFont" ref="778215083"/>
+					</object>
+					<object class="IBUIView" id="985868533">
+						<reference key="NSNextResponder" ref="143291511"/>
+						<int key="NSvFlags">1316</int>
+						<array class="NSMutableArray" key="NSSubviews"/>
+						<string key="NSFrame">{{183, 218}, {36, 22}}</string>
+						<reference key="NSSuperview" ref="143291511"/>
+						<reference key="NSWindow"/>
+						<string key="NSReuseIdentifierKey">_NS:9</string>
+						<reference key="IBUIBackgroundColor" ref="76412669"/>
+						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+					</object>
 				</array>
 				<object class="NSPSMatrix" key="NSFrameMatrix"/>
-				<string key="NSFrameSize">{320, 216}</string>
+				<string key="NSFrameSize">{320, 256}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSNextKeyView" ref="389986501"/>
+				<reference key="NSWindow"/>
+				<reference key="NSNextKeyView"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
 					<bytes key="NSWhite">MQA</bytes>
@@ -408,6 +459,14 @@
 					<string key="id">v7f-sc-pMe</string>
 				</object>
 				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">playerAirPlayButton</string>
+						<reference key="source" ref="220396080"/>
+						<reference key="destination" ref="985868533"/>
+					</object>
+					<string key="id">Xwk-hT-Nhd</string>
+				</object>
+				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
 						<string key="label">playerPlayPauseTapped:</string>
 						<reference key="source" ref="317348488"/>
@@ -442,6 +501,15 @@
 						<int key="IBEventType">13</int>
 					</object>
 					<string key="id">I22-yd-0F8</string>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">share:</string>
+						<reference key="source" ref="514871870"/>
+						<reference key="destination" ref="220396080"/>
+						<int key="IBEventType">7</int>
+					</object>
+					<string key="id">U7E-A7-spM</string>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchEventConnection" key="connection">
@@ -486,6 +554,8 @@
 							<reference ref="154608992"/>
 							<reference ref="137964510"/>
 							<reference ref="389986501"/>
+							<reference ref="514871870"/>
+							<reference ref="985868533"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -539,6 +609,16 @@
 						<reference key="object" ref="389986501"/>
 						<reference key="parent" ref="143291511"/>
 					</object>
+					<object class="IBObjectRecord">
+						<string key="id">wbO-bX-bTk</string>
+						<reference key="object" ref="514871870"/>
+						<reference key="parent" ref="143291511"/>
+					</object>
+					<object class="IBObjectRecord">
+						<string key="id">tcx-Hq-UcT</string>
+						<reference key="object" ref="985868533"/>
+						<reference key="parent" ref="143291511"/>
+					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
@@ -578,6 +658,11 @@
 				<string key="iSj-hZ-Uhd.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<reference key="iSj-hZ-Uhd.IBUserGuides" ref="0"/>
 				<boolean value="NO" key="iSj-hZ-Uhd.showNotes"/>
+				<string key="tcx-Hq-UcT.CustomClassName">MPVolumeView</string>
+				<string key="tcx-Hq-UcT.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="wbO-bX-bTk.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<reference key="wbO-bX-bTk.IBUserGuides" ref="0"/>
+				<boolean value="NO" key="wbO-bX-bTk.showNotes"/>
 				<string key="ylr-yy-hJM.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<reference key="ylr-yy-hJM.IBUserGuides" ref="0"/>
 				<boolean value="NO" key="ylr-yy-hJM.showNotes"/>
@@ -587,7 +672,119 @@
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">MPVolumeView</string>
+					<string key="superclassName">UIView</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/MPVolumeView.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">StreamingMusicViewController</string>
+					<string key="superclassName">UIViewController</string>
+					<dictionary class="NSMutableDictionary" key="actions">
+						<string key="playerNextTapped:">id</string>
+						<string key="playerPlayPauseTapped:">id</string>
+						<string key="playerPreviousTapped:">id</string>
+						<string key="playerProgressScrubbed:">id</string>
+						<string key="share:">id</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="actionInfosByName">
+						<object class="IBActionInfo" key="playerNextTapped:">
+							<string key="name">playerNextTapped:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="playerPlayPauseTapped:">
+							<string key="name">playerPlayPauseTapped:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="playerPreviousTapped:">
+							<string key="name">playerPreviousTapped:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="playerProgressScrubbed:">
+							<string key="name">playerProgressScrubbed:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="share:">
+							<string key="name">share:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="playerAirPlayButton">MPVolumeView</string>
+						<string key="playerNextButton">UIButton</string>
+						<string key="playerPauseButton">UIButton</string>
+						<string key="playerPlayPauseButton">UIButton</string>
+						<string key="playerPreviousButton">UIButton</string>
+						<string key="playerScrubber">UISlider</string>
+						<string key="playerStatus">UILabel</string>
+						<string key="playerSubtitle">UILabel</string>
+						<string key="playerTimeElapsed">UILabel</string>
+						<string key="playerTimeRemaining">UILabel</string>
+						<string key="playerTitle">UILabel</string>
+						<string key="view">UIView</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="playerAirPlayButton">
+							<string key="name">playerAirPlayButton</string>
+							<string key="candidateClassName">MPVolumeView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="playerNextButton">
+							<string key="name">playerNextButton</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="playerPauseButton">
+							<string key="name">playerPauseButton</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="playerPlayPauseButton">
+							<string key="name">playerPlayPauseButton</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="playerPreviousButton">
+							<string key="name">playerPreviousButton</string>
+							<string key="candidateClassName">UIButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="playerScrubber">
+							<string key="name">playerScrubber</string>
+							<string key="candidateClassName">UISlider</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="playerStatus">
+							<string key="name">playerStatus</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="playerSubtitle">
+							<string key="name">playerSubtitle</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="playerTimeElapsed">
+							<string key="name">playerTimeElapsed</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="playerTimeRemaining">
+							<string key="name">playerTimeRemaining</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="playerTitle">
+							<string key="name">playerTitle</string>
+							<string key="candidateClassName">UILabel</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="view">
+							<string key="name">view</string>
+							<string key="candidateClassName">UIView</string>
+						</object>
+					</dictionary>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/StreamingMusicViewController.h</string>
+					</object>
+				</object>
+			</array>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencies">
@@ -605,6 +802,7 @@
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
 		<dictionary class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
+			<string key="glyphicons_151_new_window.png">{26, 22}</string>
 			<string key="glyphicons_172_rewind.png">{23, 18}</string>
 			<string key="glyphicons_173_play.png">{16, 18}</string>
 			<string key="glyphicons_174_pause.png">{10, 16}</string>
