--- a/PhishOD/MediaPlayer/StreamingMusicViewController.xib
+++ b/PhishOD/MediaPlayer/StreamingMusicViewController.xib
@@ -56,7 +56,7 @@
                     <rect key="frame" x="124" y="514" width="73" height="44"/>
                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES"/>
                     <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                    <state key="normal" image="glyphicons_173_play.png">
+                    <state key="normal" image="play-icon">
                         <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
                         <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
@@ -147,8 +147,8 @@
     </objects>
     <resources>
         <image name="forward-icon" width="23" height="18"/>
-        <image name="glyphicons_173_play.png" width="16" height="18"/>
         <image name="pause-icon" width="10" height="16"/>
+        <image name="play-icon" width="16" height="18"/>
         <image name="rewind-icon" width="23" height="18"/>
     </resources>
 </document>
